--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="canonical" href="https://ait-1.onrender.com/">
+    <link rel="canonical" href="https://ait-1.onrender.com/" />
     <link rel="shortcut icon" href="logo.webP" type="image/x-icon" />
     <link rel=" icon" href="logo.webP" type="image/x-icon" />
     <!-- css -->
@@ -64,7 +64,20 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.webP" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH InfoTech</h1>
+          <p
+            style="
+              display: block;
+              font-size: 2em;
+              margin-block-start: 0.67em;
+              margin-block-end: 0.67em;
+              margin-inline-start: 0px;
+              margin-inline-end: 0px;
+              font-weight: bold;
+            "
+            class="heading"
+          >
+            ANSH InfoTech
+          </p>
         </a>
         <button
           class="navbar-toggler"
@@ -133,7 +146,9 @@
     <div class="hero container-fluid">
       <div class="row hero-row justify-content-center flex-wrap">
         <div class="col-md-6 col-sm-6 hero-col">
-          <h1>Build Your <span class="gradient-text">Digital Empire</span></h1>
+          <p class="p1">
+            Build Your <span class="gradient-text">Digital Empire</span>
+          </p>
           <p>
             From bustling business hubs to tech-savvy startups, we empower
             Punjab's digital dreams. Our tailored IT solutions and cutting-edge
@@ -728,7 +743,21 @@
     </div>
     <!-- clients -->
     <div class="client">
-      <h1>Our Associates</h1>
+      <p
+        style="
+          text-align: center;
+          font-weight: 800;
+          color: #2d3958;
+          display: block;
+          font-size: 2.5em;
+          margin-block-start: 0.67em;
+          margin-block-end: 0.67em;
+          margin-inline-start: 0px;
+          margin-inline-end: 0px;
+        "
+      >
+        Our Associates
+      </p>
       <div style="margin-top: 20px; margin-bottom: 50px; padding: 30px">
         <div class="owl-carousel owl-theme">
           <div class="item" style="height: 50px; gap: 10px">
