--- a/public/courses/web.html
+++ b/public/courses/web.html
@@ -1052,8 +1052,8 @@
               <div class="accordion-body">
                 The duration of this course varies depending on the learning
                 format. We offer multiple programs that typically lasts from 6
-                weeks to 6 months.
-                We also have Diploma Programs that last for 12 months
+                weeks to 6 months. We also have Diploma Programs that last for
+                12 months
               </div>
             </div>
           </div>
@@ -1253,12 +1253,186 @@
         </div>
       </div>
     </section>
+
+    <!-- Review Section -->
+    <section class="review-section my-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 col-sm-12">
+            <!-- Content with Image -->
+            <div class="review-content">
+              <h3>We value your feedback!</h3>
+              <p>
+                Share your experience with us by posting a review below. Your
+                feedback helps us improve and provide better services to our
+                community.
+              </p>
+              <img
+                src="../images/feedback.webP"
+                alt="Feedback"
+                class="img-fluid mt-4"
+              />
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <!-- Review Form -->
+            <div class="review-form">
+              <h2>Post a Review</h2>
+              <form action="/submit-review" method="post">
+                <div class="form-group">
+                  <label for="name">Your Name:</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    name="name"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="course">Course:</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="course"
+                    name="course"
+                    required
+                    value="Web Development"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="rating">Rating:</label>
+                  <select
+                    class="form-control"
+                    id="rating"
+                    name="rating"
+                    required
+                  >
+                    <option value="">Select Rating</option>
+                    <option value="5">5 - Excellent</option>
+                    <option value="4">4 - Very Good</option>
+                    <option value="3">3 - Good</option>
+                    <option value="2">2 - Fair</option>
+                    <option value="1">1 - Poor</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="review">Your Review:</label>
+                  <textarea
+                    class="form-control"
+                    id="review"
+                    name="review"
+                    rows="4"
+                    required
+                  ></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="image">Upload Your Image:</label>
+                  <input
+                    id="upload_widget"
+                    class="cloudinary-button form-control"
+                    name="image"
+                    required
+                    value="Upload Image"
+                  />
+                </div>
+                <button type="submit" class="btn btn-primary">
+                  Submit Review
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--* footer  -->
     <footer id="footer">
       <h6 style="color: #7b88a8; text-align: center">
         ©Copyright ANSH InfoTech. All Rights Reserved
       </h6>
     </footer>
+    <script
+      src="https://upload-widget.cloudinary.com/latest/global/all.js"
+      type="text/javascript"
+    ></script>
+    <script type="text/javascript">
+      var result;
+      var myWidget = cloudinary.createUploadWidget(
+        {
+          cloudName: "dohhbq1ly",
+          uploadPreset: "dtp53xo0",
+        },
+        (error, res) => {
+          if (!error && res && res.event === "success") {
+            result = res;
+            console.log("Done! Here is the image info: ", result.info);
+          }
+        }
+      );
+
+      document.getElementById("upload_widget").addEventListener(
+        "click",
+        function () {
+          myWidget.open();
+        },
+        false
+      );
+
+      document
+        .getElementById("addEmployeeForm")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault();
+
+          const review = document.getElementById("review").value;
+          const rating = document.getElementById("rating").value;
+          const course = document.getElementById("course").value;
+          const name = document.getElementById("name").value;
+
+          if (!result) {
+            alert("Please upload an image.");
+            return;
+          }
+
+          const image = result.info.secure_url;
+
+          try {
+            const response = await fetch(
+              "",
+              {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                  name,
+                  course,
+                  rating,
+                  review,
+                  image,
+                }),
+              }
+            );
+
+            const data = await response.json();
+
+            if (response.ok) {
+              // Login successful, redirect or perform any necessary action
+              // window.location.href = "/admin/dashboard";
+              alert(
+                "Review Submitted,It will be shown once AIT approves and checks it for any clerical mistake"
+              );
+              document.getElementById("addEmployeeForm").reset();
+            } else {
+              // Display error message
+              alert(data.message);
+            }
+          } catch (error) {
+            console.error("Error:", error);
+          }
+        });
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
