--- a/public/Alogin.html
+++ b/public/Alogin.html
@@ -112,7 +112,7 @@
           event.preventDefault();
 
           // Fetch API to send data to the server
-          fetch("http://localhost:3000/api/admin/login", {
+          fetch("https://anshinfotech.org/api/admin/login", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
