--- a/public/admin.html
+++ b/public/admin.html
@@ -291,7 +291,7 @@
       // Fetch reviews from the server
       async function fetchReviews() {
         try {
-          const response = await fetch("http://localhost:3000/api/getreviews"); // Assuming '/api/reviews' is your endpoint
+          const response = await fetch("https://anshinfotech.org/api/getreviews"); // Assuming '/api/reviews' is your endpoint
           const data = await response.json();
           console.log(data);
           if (data.success) {
@@ -313,7 +313,7 @@
       async function handleUpdateReview(reviewId) {
         try {
           const response = await fetch(
-            `http://localhost:3000/api/update-review/${reviewId}`,
+            `https://anshinfotech.org/api/update-review/${reviewId}`,
             {
               method: "PUT", // Assuming POST method is used for update
             }
@@ -332,7 +332,7 @@
       async function handleDeleteReview(reviewId) {
         try {
           const response = await fetch(
-            `http://localhost:3000/api/delete-review/${reviewId}`,
+            `https://anshinfotech.org/api/delete-review/${reviewId}`,
             {
               method: "DELETE", // Using DELETE method for delete operation
             }
@@ -376,7 +376,7 @@
 
       async function fetchContactus() {
         try {
-          const response = await fetch("http://localhost:3000/api/allcontacts"); // Assuming '/api/reviews' is your endpoint
+          const response = await fetch("https://anshinfotech.org/api/allcontacts"); // Assuming '/api/reviews' is your endpoint
           const data = await response.json();
           console.log(data);
           if (data.success) {
@@ -410,7 +410,7 @@
       async function fetchEnquiries() {
         try {
           const response = await fetch(
-            "http://localhost:3000/api/allenquiries"
+            "https://anshinfotech.org/api/allenquiries"
           ); // Assuming '/api/reviews' is your endpoint
           const data = await response.json();
           console.log(data);
@@ -447,7 +447,7 @@
 
       async function fetchEmployees() {
         try {
-          const response = await fetch("http://localhost:3000/api/employees"); // Assuming '/api/employees' is your endpoint
+          const response = await fetch("https://anshinfotech.org/api/employees"); // Assuming '/api/employees' is your endpoint
           const data = await response.json();
           console.log(data);
           if (data.success==true) {
@@ -464,7 +464,7 @@
       async function handleUpdateEmployee(reviewId) {
         try {
           const response = await fetch(
-            `http://localhost:3000/api/employees/${reviewId}`,
+            `https://anshinfotech.org/api/employees/${reviewId}`,
             {
               method: "PUT", // Assuming POST method is used for update
             }
@@ -483,7 +483,7 @@
       async function handleDeleteEmployee(reviewId) {
         try {
           const response = await fetch(
-            `http://localhost:3000/api/employees/${reviewId}`,
+            `https://anshinfotech.org/api/employees/${reviewId}`,
             {
               method: "DELETE", // Using DELETE method for delete operation
             }
@@ -616,7 +616,7 @@ document
     const image = result.info.secure_url;
 
     try {
-      const response = await fetch("http://localhost:3000/api/employees", {
+      const response = await fetch("https://anshinfotech.org/api/employees", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
