--- a/public/courses/cyberSecurity.html
+++ b/public/courses/cyberSecurity.html
@@ -1183,7 +1183,7 @@
               course: document.getElementById("course").value,
             };
             console.log(formData); // For debugging
-            fetch("http://localhost:3000/api/submit-form", {
+            fetch("https://anshinfotech.org/api/submit-form", {
               method: "POST",
               body: JSON.stringify(formData),
               headers: {
@@ -1265,7 +1265,7 @@
 
           try {
             const response = await fetch(
-              "http://localhost:3000/api/coursesubmit",
+              "https://anshinfotech.org/api/coursesubmit",
               {
                 method: "post",
                 headers: {
