--- a/public/courses/java.html
+++ b/public/courses/java.html
@@ -1131,7 +1131,7 @@
             course: document.getElementById("course").value,
           };
           console.log(formData); // For debugging
-          fetch("http://localhost:3000/api/submit-form", {
+          fetch("https://anshinfotech.org/api/submit-form", {
             method: "POST",
             body: JSON.stringify(formData),
             headers: {
@@ -1211,7 +1211,7 @@
 
         try {
           const response = await fetch(
-            "http://localhost:3000/api/coursesubmit",
+            "https://anshinfotech.org/api/coursesubmit",
             {
               method: "post",
               headers: {
