--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,7 @@
       crossorigin="anonymous"
     />
     <link rel="canonical" href="https://ait-1.onrender.com/" />
-    <link rel="shortcut icon" href="logo.webP" type="image/x-icon" />
-    <link rel=" icon" href="logo.webP" type="image/x-icon" />
+    <link rel=" icon" href="logo.jpeg" type="image/x-icon" />
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <!-- font awesome -->
