--- a/public/index.html
+++ b/public/index.html
@@ -855,6 +855,20 @@
           </div>
         </div>
       </div>
+      <div style="visibility: hidden;">
+      <a href="./courses/advancedIOS.html">IOS</a>
+      <a href="./courses/advanceML.html">IOS</a>
+      <a href="./courses/ai.html">IOS</a>
+      <a href="./courses/appdev.html">IOS</a>
+      <a href="./courses/backendWeb.html">IOS</a>
+      <a href="./courses/bigdata.html">IOS</a>
+      <a href="./courses/bigdata.html">IOS</a>
+      <a href="./courses/c++.html">IOS</a>
+      <a href="./courses/ceh.html">IOS</a>
+      <a href="./courses/cloud.html">IOS</a>
+      <a href="./courses/cprograming.html">IOS</a>
+      <a href="./courses/cyberSecurity.html">IOS</a>
+      </div>
     </footer>
     <!-- Bootstrap -->
     <script
