--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
       property="og:description"
       content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider.From development to cybersecurity, AI to digital marketing, we got you covered!"
     />
-    <meta property="og:url" content="https://anshinfotech.org" />
+    <meta property="og:url" content="https://www.anshinfotech.org" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://anshinfotech.org/logo" />
+    <meta property="og:image" content="https://www.anshinfotech.org/logo" />
 
     <title>Home - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
     <link
