--- a/public/register.html
+++ b/public/register.html
@@ -124,7 +124,7 @@
           <div class="col-md-9 register-form-col">
             <form
               id="registrationForm"
-              action="https://anshinfotech.org/api/register"
+              action="https://www.anshinfotech.org/api/register"
               method="POST"
             >
               <div class="row justify-content-center gap-0">
@@ -641,7 +641,7 @@
           event.preventDefault();
 
           // Fetch API to send data to the server
-          fetch("https://anshinfotech.org/api/register", {
+          fetch("https://www.anshinfotech.org/api/register", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
