--- a/public/about.html
+++ b/public/about.html
@@ -149,7 +149,7 @@
                 width="214"
               />
               <div><h4>Jaspreet Singh</h4></div>
-              <div><p>CyberSecurity Analyst</p></div>
+              <div><p>Sr. CyberSecurity Analyst</p></div>
             </div>
             <div class="col-md-3 item team-col mt-3">
               <img
@@ -159,7 +159,7 @@
                 width="214"
               />
               <div><h4>Paramvir Singh</h4></div>
-              <div><p>Full Stack Developer</p></div>
+              <div><p>Sr. Full Stack Developer</p></div>
             </div>
             <div class="col-md-3 item team-col mt-3">
               <img
@@ -169,7 +169,7 @@
                 width="214"
               />
               <div><h4>Gobind Singh</h4></div>
-              <div><p>CyberSecurity Expert</p></div>
+              <div><p>Jr. CyberSecurity Expert</p></div>
             </div>
             <div class="col-md-3 item team-col mt-3">
               <img
@@ -179,9 +179,9 @@
                 width="214"
               />
               <div><h4>Khushi Garg</h4></div>
-              <div><p>Graphic Designer</p></div>
+              <div><p>Sr. Graphic Designer</p></div>
             </div>
-            <div class="col-md-3 item team-col mt-3">
+            <!-- <div class="col-md-3 item team-col mt-3">
               <img
                 src="./images/Sristy.webP"
                 alt="not-found"
@@ -190,11 +190,11 @@
               />
               <div><h4>Srishty Sharma</h4></div>
               <div><p>Digital Marketing Expert</p></div>
-            </div>
+            </div> -->
             <div class="col-md-3 item team-col mt-3">
               <img src="images/Kuldeep.webP" alt="not-found" height="214" width="214" />
               <div><h4>Kuldeep</h4></div>
-              <div><p>Data Analytics</p></div>
+              <div><p>Sr. Data Analytics</p></div>
             </div>
             <div class="col-md-3 item team-col mt-3">
               <img
@@ -204,7 +204,7 @@
                 width="214"
               />
               <div><h4>Dinesh</h4></div>
-              <div><p>CyberSecurity Intern</p></div>
+              <div><p>Jr. CyberSecurity Analyst</p></div>
             </div>
             <div class="col-md-3 item team-col mt-3">
               <img
@@ -214,9 +214,9 @@
                 width="214"
               />
               <div><h4>Ashutosh</h4></div>
-              <div><p>AI/ML Intern</p></div>
+              <div><p>Jr. AI/ML Engineer</p></div>
             </div>
-            <div class="col-md-3 item team-col mt-3">
+            <!-- <div class="col-md-3 item team-col mt-3">
               <img
                 src="images/Nishta.webP"
                 alt="not-found"
@@ -225,7 +225,7 @@
               />
               <div><h4>Nishta</h4></div>
               <div><p>Data Analytics Intern</p></div>
-            </div>
+            </div> -->
             <div class="col-md-3 item team-col mt-3">
               <img
                 src="images/Gauri Shankar.webP"
@@ -234,7 +234,7 @@
                 width="214"
               />
               <div><h4>Gaurishankar Chaudary</h4></div>
-              <div><p>Web Intern</p></div>
+              <div><p>Jr. Full Stack Web Developer</p></div>
             </div>
           </div>
         </div>
