--- a/public/index.html
+++ b/public/index.html
@@ -148,11 +148,12 @@
             Build Your <span class="gradient-text">Digital Empire</span>
           </p>
           <p>
-            From bustling business hubs to tech-savvy startups, we empower
+            Welcome to ANSH-InfoTech,the only Leading IT Solutions in Ludhiana
+            <!-- From bustling business hubs to tech-savvy startups, we empower
             Punjab's digital dreams. Our tailored IT solutions and cutting-edge
             training bridge the gap between ambition and achievement. Cloud your
             worries away, secure your data like Fort Knox, and code your way to
-            success. Join ANSH InfoTech and conquer the digital frontier.
+            success. Join ANSH InfoTech and conquer the digital frontier. -->
           </p>
         </div>
         <div class="col-md-4">
