--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PBC9KP87');</script>
-  <!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PBC9KP87");
+    </script>
+    <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -67,9 +74,15 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -148,12 +161,12 @@
             Build Your <span class="gradient-text">Digital Empire</span>
           </p>
           <p>
-            Welcome to ANSH-InfoTech,the only Leading IT Solutions in Ludhiana
-            <!-- From bustling business hubs to tech-savvy startups, we empower
-            Punjab's digital dreams. Our tailored IT solutions and cutting-edge
-            training bridge the gap between ambition and achievement. Cloud your
-            worries away, secure your data like Fort Knox, and code your way to
-            success. Join ANSH InfoTech and conquer the digital frontier. -->
+            Welcome to ANSH-InfoTech, Ludhiana's leading IT solutions provider.
+            We specialize in cyber security, digital marketing, artificial
+            intelligence, data science, data analytics, web development, and
+            MERN stack development. Our expert team delivers innovative and
+            reliable solutions tailored to your unique needs, driving growth and
+            excellence in the digital age.
           </p>
         </div>
         <div class="col-md-4">
@@ -868,19 +881,19 @@
           </div>
         </div>
       </div>
-      <div style="visibility: hidden;">
-      <a href="./courses/advancedIOS.html">IOS</a>
-      <a href="./courses/advanceML.html">IOS</a>
-      <a href="./courses/ai.html">IOS</a>
-      <a href="./courses/appdev.html">IOS</a>
-      <a href="./courses/backendWeb.html">IOS</a>
-      <a href="./courses/bigdata.html">IOS</a>
-      <a href="./courses/bigdata.html">IOS</a>
-      <a href="./courses/c++.html">IOS</a>
-      <a href="./courses/ceh.html">IOS</a>
-      <a href="./courses/cloud.html">IOS</a>
-      <a href="./courses/cprograming.html">IOS</a>
-      <a href="./courses/cyberSecurity.html">IOS</a>
+      <div style="visibility: hidden">
+        <a href="./courses/advancedIOS.html">IOS</a>
+        <a href="./courses/advanceML.html">IOS</a>
+        <a href="./courses/ai.html">IOS</a>
+        <a href="./courses/appdev.html">IOS</a>
+        <a href="./courses/backendWeb.html">IOS</a>
+        <a href="./courses/bigdata.html">IOS</a>
+        <a href="./courses/bigdata.html">IOS</a>
+        <a href="./courses/c++.html">IOS</a>
+        <a href="./courses/ceh.html">IOS</a>
+        <a href="./courses/cloud.html">IOS</a>
+        <a href="./courses/cprograming.html">IOS</a>
+        <a href="./courses/cyberSecurity.html">IOS</a>
       </div>
     </footer>
     <!-- Bootstrap -->
