--- a/public/index.html
+++ b/public/index.html
@@ -161,12 +161,12 @@
             Build Your <span class="gradient-text">Digital Empire</span>
           </p>
           <p>
-            Welcome to ANSH-InfoTech, Ludhiana's leading IT solutions provider.
-            We specialize in cyber security, digital marketing, artificial
-            intelligence, data science, data analytics, web development, and
-            MERN stack development. Our expert team delivers innovative and
-            reliable solutions tailored to your unique needs, driving growth and
-            excellence in the digital age.
+            Welcome to ANSH InfoTech, Ludhiana's leading IT solutions provider.
+            We specialize in Cyber Security, Digital Marketing, Artificial
+            Intelligence, Data Science, Data Analytics and Web Development(MERN
+            Stack). Our expert team delivers innovative and reliable solutions
+            tailored to your unique needs, driving growth and excellence in the
+            digital age.
           </p>
         </div>
         <div class="col-md-4">
