--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,14 @@
     <meta property="og:image" content="https://www.anshinfotech.org/logo" />
 
     <title>Home - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
+    <link rel="canonical" href="https://www.anshinfotech.org" />
+    <link rel=" icon" href="logo.webP" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="canonical" href="https://ait-1.onrender.com/" />
-    <link rel=" icon" href="logo.webP" type="image/x-icon" />
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <!-- font awesome -->
