--- a/public/it-solution.html
+++ b/public/it-solution.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PBC9KP87");
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider.From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
+    <meta
+      property="og:title"
+      content="Home - ANSH InfoTech:Leading IT Solutions in Ludhiana"
+    />
+    <meta
+      property="og:description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider.From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
+    <meta property="og:url" content="https://www.anshinfotech.org" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.anshinfotech.org/logo" />
+
     <title>IT-Solutions - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
+    <link rel="canonical" href="https://www.anshinfotech.org" />
+    <link rel=" icon" href="logo.webP" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,6 +56,16 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript
+        ><iframe
+          src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
+          height="0"
+          width="0"
+          style="display: none; visibility: hidden"
+        ></iframe
+      ></noscript>
+      <!-- End Google Tag Manager (noscript) -->
     <!--! navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
