--- a/public/Alogin.html
+++ b/public/Alogin.html
@@ -171,7 +171,7 @@
               if (data.success === true) {
                 console.log(data);
                 // Registration successful
-                alert("Registration successful!");
+                alert("Login successful!");
                 window.location.href = data.redirectTo;
                 console.log(data.redirectTo);
                 // You can redirect or perform additional actions here
