--- a/public/index.html
+++ b/public/index.html
@@ -374,10 +374,14 @@
             </div>
             <h3>Development</h3>
             <p>
-              Unleash your code superpowers! ‍ANSH InfoTech ignites your
-              developer journey with in-demand skills training. From coding
-              bootcamps to advanced tech mastery, we fuel your digital future.
-              Join the coding revolution and build your dream!
+              Our development team specializes in crafting tailored software
+              solutions to meet your business needs. Leveraging cutting-edge
+              technologies such as Artificial Intelligence, we enhance
+              decision-making and streamline processes. With Machine Learning,
+              we provide predictive modelling and data-driven insights.
+              Additionally, our expertise in MERN Stack Development ensures
+              dynamic and responsive web applications using MongoDB, Express.js,
+              React, and Node.js
             </p>
             <a href="devlopment.html">learn more</a>
           </div>
@@ -488,11 +492,14 @@
             </div>
             <h3>IT Solution</h3>
             <p>
-              Struggling with IT? Conquer complexity with ANSH InfoTech's
-              tailored solutions and expert training! From cloud magic to
-              security shields, we empower your business to dominate the digital
-              realm. Contact us today and experience the ANSH InfoTech
-              difference!
+              We believe in the transformative power of knowledge. Our skill
+              development programs equip individuals with essential skills for
+              success in today's tech-driven world. From Cyber Security training
+              to protect against evolving threats, to mastering Digital
+              Marketing techniques like SEO, content creation, and social media
+              management, and gaining proficiency in Cloud Computing platforms
+              such as AWS, Azure, and Google Cloud, we offer comprehensive
+              training to enhance your capabilities.
             </p>
             <a href="it-solution.html">learn more</a>
           </div>
@@ -623,10 +630,15 @@
             </div>
             <h3>Skill Development</h3>
             <p>
-              Level up your tech! ANSH InfoTech ignites your career with
-              in-demand IT skills training. Master cloud, code, and
-              cybersecurity. From novice to ninja, we empower your future. Join
-              the digital revolution today!
+              Stay ahead of the curve with our range of IT solutions designed to
+              optimize your business operations. Our Cloud Computing Services
+              facilitate seamless migration to scalable and cost-effective cloud
+              resources. With our Cyber Security Solutions, rest assured that
+              your systems are fortified against cyber threats, complemented by
+              advanced incident response strategies. Embrace Digital
+              Transformation with our tailored strategies, integrating new
+              technologies into your business processes for enhanced efficiency
+              and innovation.
             </p>
             <div style="margin-top: 34px">
               <a href="training.html">learn more</a>
